--- a/index.html
+++ b/index.html
@@ -7,32 +7,42 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rek="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
 
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
-
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
+  <div class="container">
+    <div class="card-content">
+      <div class="card-title">
+        <h1>Get <span>insights</span> that help your business grow.
+        </h1>
+      </div>
+      <div class="card-text">
+        <p> Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.
+        </p>
+      </div>
+      <div class="card-desc">
+        <h1>10k+</h1>
+        <h1>314</h1>
+        <h1>12m+</h1>
+        <div class="card-sub-desc">
+          <p>companies</p>
+          <p>templatesv</p>
+          <p>queries</p>
+        </div>
+      </div>
+    </div>
+    <div class="card-img">
+      <img
+        src="https://github.com/zaklinaradivojevic/Stats-preview-card-component/blob/main/images/image-header-desktop.jpg?raw=true"
+        alt="card-img">
+    </div>
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
